--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
 title: Amy Bray Portfolio
 description: People Ops & HRIS Solutions | AI + Engagement | Global Workforce Programs
+show_downloads: false
+
