--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ theme: jekyll-theme-cayman
 title: Amy Bray Portfolio
 description: People Ops & HRIS Solutions | AI + Engagement | Global Workforce Programs
 show_downloads: false
+include:
+  - style.css
 
